# channel-mcp

./: MANIFEST.in  README.md  pyproject.toml
src/mcpserver/: __main__.py  deployment.py  loader.py
src/mcpserver/config/user-permissions/: skill.md
