[project]
name = "channel_mcp"
version = "0.1.0"
description = "Only use for channel project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


